openshift/distributed-tracing/service-mesh/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: first
    version: v1
    app.kubernetes.io/component: first
    app.kubernetes.io/instance: first
  name: first
  namespace: service-mesh-tracing
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: first
      app: first
      version: v1
  template:
    metadata:
      labels:
        deployment: first
        app: first
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - env:
        - name: NEXT_LAYER_NAME
          value: second
        - name: NEXT_LAYER_NAMESPACE
          value: service-mesh-tracing
        - name: THIS_LAYER_NAME
          value: first
        - name: VERSION_ID
          value: v1
        image: quay.io/marrober/layers:latest
        imagePullPolicy: IfNotPresent
        name: first
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
