openshift/distributed-tracing/service-mesh/04-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fourth
    version: v1
    app.kubernetes.io/component: fourth
    app.kubernetes.io/instance: fourth
  name: fourth
  namespace: service-mesh-tracing
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: fourth
      app: fourth
      version: v1
  template:
    metadata:
      labels:
        deployment: fourth
        app: fourth
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - env:
        - name: THIS_LAYER_NAME
          value: fourth
        - name: VERSION_ID
          value: v1
        image: quay.io/marrober/layers:latest
        imagePullPolicy: IfNotPresent
        name: fourth
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
