openshift/distributed-tracing/service-mesh/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: first
    app.kubernetes.io/component: first
    app.kubernetes.io/instance: first
  name: first
  namespace: service-mesh-tracing
spec:
  type: ClusterIP  
  ports:
  - name: tcp-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: first
