openshift/distributed-tracing/service-mesh/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: second
    app.kubernetes.io/component: second
    app.kubernetes.io/instance: second
  name: second
  namespace: service-mesh-tracing
spec:
  type: ClusterIP  
  ports:
  - name: tcp-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: second
