openshift/distributed-tracing/service-mesh/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: third
    app.kubernetes.io/component: third
    app.kubernetes.io/instance: third
  name: third
  namespace: service-mesh-tracing
spec:
  type: ClusterIP
  ports:
  - name: http-8080
    port: 8080
    targetPort: 8080
  selector:
    deployment: third
