openshift/distributed-tracing/service-mesh/01-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: first-gateway
spec:
  selector:
     istio: ingressgateway # use istio 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
