openshift/distributed-tracing/service-mesh/01-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: first
    app.kubernetes.io/component: first
    app.kubernetes.io/instance: first
  name: first
  namespace: service-mesh-tracing
spec:
  port:
    targetPort: http-8080
  to:
    kind: Service
    name: first
    weight: 100
