openshift/distributed-tracing/service-mesh/01-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: first
spec:
  hosts:
  - "*"
  gateways:
  - first-gateway
  http:
  - match:
    - uri:
        exact: /call-layers
    - uri:
        exact: /get-info       
    - uri:
        exact: /get-json                
    - uri:
        exact: /
    route:
    - destination:
        host: first 
        port:
          number: 8080
