openshift/distributed-tracing/service-mesh/04-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fourth
spec:
  hosts:
  - fourth
  http:
  - match:
    - uri:
        exact: /call-layers
    - uri:
        exact: /get-info        
    - uri:
        exact: /get-json           
    - uri:    
        exact: /
    route:
    - destination:
        host: fourth
        port:
          number: 8080
